<resources>
    <string name="app_name">PartyuSB</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Configurações</string>

    <string name="cadastro_textview_titulo1">Faça seu Cadastro Completo ou Edite os Dados Já Cadastrados.</string>
    <string name="cadastro_textview_Descricao">Para que você possa utilizar algumas funcionalidade do nosso serviço, é necessario que
        você informe os dados obrigatorios deste cadastro.</string>
    <string name="cadastro_textview_NomeSobrenome">Nome e Sobrenome:</string>
    <string name="cadastro_edittext_NomeSobrenome" />
    <string name="cadastro_textview_NickName">Nick Name:</string>
    <string name="cadastro_edittext_NickName" />
    <string name="cadastro_textview_Cpf">CPF:</string>
    <string name="cadastro_edittext_Cpf" />
    <string name="cadastro_textview_Email">Email:</string>
    <string name="cadastro_edittext_Email" />
    <string name="cadastro_textview_DataDeNascimento">Data de Nacimento</string>
    <string name="cadastro_edittext_DataDeNascimento" />
    <string name="cadastro_textview_Sexo">Sexo:</string>
    <string name="cadastro_radiobutton_sexoMasculino">Masculino</string>
    <string name="cadastro_radiobutton_sexoFeminino">Feminino</string>
    <string name="cadastro_radiobutton_sexoOutro">Outro</string>
    <string name="cadastro_textview_Celular">Celular:</string>
    <string name="cadastro_edittext_Celular" />
    <string name="cadastro_textview_Cidade">Cidade:</string>
    <string name="cadastro_edittext_Cidade" />
    <string name="cadastro_textview_Rua">Rua:</string>
    <string name="cadastro_edittext_Rua" />
    <string name="cadastro_textview_Numero">Número:</string>
    <string name="cadastro_edittext_Numero" />
    <string name="cadastro_textview_Bairro">Bairro:</string>
    <string name="cadastro_edittext_Bairro" />
    <string name="cadastro_textview_Estado">Estado:</string>
    <string name="cadastro_textview_Pais">País:</string>
    <string name="cadastro_textview_Senha">Senha:</string>
    <string name="cadastro_edittext_Senha" />
    <string name="cadastro_textview_ConfirmarSenha">Confirmar Senha:</string>
    <string name="cadastro_edittext_ConfirmarSenha" />
    <string name="cadastro_textview_Rodape">Aqui vai um Texto de Rodapé</string>
    <string name="cadastro_checkbox_TermosDeUso">Aceito os Termos de Uso</string>

    <string name="cadastrar_button_CadastrarUsuario">Cadastrar</string>


    <string name="primeiratela_textview_texto1">Seja Bem Vindo ao #PartyuSB</string>
    <string name="primeiratela_textview_texto2">Aqui você pode visualizar os eventos que estão acontecendo em sua cidade e tornar-se um
    organizador de eventos.</string>
    <string name="primeiratela_textview_Login">Texto Sobre Logar</string>
    <string name="primeiratela_textview_Cadastrar">Texto Sobre Cadastrar</string>
    <string name="primeiratela_button_Login">Logar</string>
    <string name="primeiratela_button_Cadastro">Cadastrar</string>
    <string name="primeiratela_textview_Rodape">Aqui vai texto Rodapé</string>


    <string name="telalogin_textview_Descricao">Texto Descricão sobre esta tela</string>
    <string name="telalogin_textview_Login">Informe seu Login:</string>
    <string name="telalogin_edittext_Login" />
    <string name="telalogin_textview_Senha">Informe sua Senha:</string>
    <string name="telalogin_edittext_Senha" />
    <string name="telalogin_checkbox_ManterConectado">Manter Conectado ?</string>
    <string name="telalogin_textview_EsqueceuSenha">Esqueceu sua Senha? Clique Aqui !</string>
    <string name="telalogin_button_Logar">Logar</string>
    <string name="telalogin_textview_Rodape">Aqui vai texto rodape</string>


    <string name="cadastrosimples_textview_Titulo">Aqui vai um Titulo</string>
    <string name="cadastrosimples_textview_Descricao">Aqui vai uma descricao sobre o cadatro simples e cadastro completo ou logar cadastrar-se com FB</string>
    <string name="cadastrosimples_textview_NomeSobrenome">Nome e Sobrenome:</string>
    <string name="cadastrosimples_edittext_NomeSobrenome" />
    <string name="cadastrosimples_textview_Email">Email:</string>
    <string name="cadastrosimples_edittext_Email" />
    <string name="cadastrosimples_textview_DataDeNascimento">Data de Nascimento:</string>
    <string name="cadastrosimples_edittext_DataDeNascimento" />
    <string name="cadastrosimples_textview_Cidade">Cidade:</string>
    <string name="cadastrosimples_edittext_Cidade" />
    <string name="cadastrosimples_textview_Sexo">Sexo:</string>
    <string name="cadastrosimples_textview_Bairro">Bairro:</string>
    <string name="cadastrosimples_textview_Senha">Senha:</string>
    <string name="cadastrosimples_edittext_Senha" />
    <string name="cadastrosimples_checkbox_TermosDeUso">Concordo com os Termos de Uso.</string>
    <string name="cadastrosimples_button_Cadastrar">Cadastrar-se</string>
    <string name="cadastrosimples_textview_CadastroCompleto">Clique aqui e faça seu cadastro completo !</string>
    <string name="cadastrosimples_textview_Rodape">Aqui vai Algo de Rodapé</string>
    <string name="cadastrosimples_textview_ConfirmarSenha">Confirmar Senha:</string>
    <string name="cadastrosimples_edittext_ConfirmarSenha" />


    <string name="criarevento_textview_Titulo1">Aqui vai um titulo Principal</string>
    <string name="criarevento_textview_Titulo2">Aqui vai uma Descricao sobre esta tela</string>
    <string name="criarevento_textview_Descricao">Aqui vai uma Descricao</string>
    <string name="criarevento_textview_NomeEvento">Nome do Evento:</string>
    <string name="criarevento_edittext_NomeEvento" />
    <string name="criarevento_textview_LocalEvento">Local:</string>
    <string name="criarevento_edittext_LocalEvento" />
    <string name="criarevento_textview_Categoria">Categoria:</string>
    <string name="criarevento_textview_DescricaoEvento">Descrição:</string>
    <string name="criarevento_edittext_Descricao" />
    <string name="criarevento_textview_Preco">Preço em Reais:</string>
    <string name="criarevento_edittext_Preco" />
    <string name="criarevento_textview_DataEvento">Data Evento:</string>
    <string name="criarevento_textview_HoraInicial">Hora Inicial:</string>
    <string name="criarevento_textview_HoraFinal">Hora Final:</string>
    <string name="criarevento_textview_ImagemEvento">Imagem do Evento:</string>
    <string name="criarevento_button_CriarEvento">Criar Evento</string>
    <string name="criarevento_textview_Rodape">Aqui vai um Texto de Rodapé</string>
    <string name="criarevento_textview_Bairro">Bairro:</string>
    <string name="criarevento_textview_Rua">Rua:</string>
    <string name="criarevento_edittext_Rua" />
    <string name="criarevento_textview_Numero">Número:</string>
    <string name="criarevento_edittext_Numero" />
    <string name="criarevento_textview_Cidade">Cidade:</string>


    <string name="criarcategoria_textview_NomeCategoria">Nome Categoria:</string>
    <string name="criarcategoria_edittext_NomeCategoria" />
    <string name="criarcategoria_textview_IconeCategoria">Icone:</string>
    <string name="criarcategoria_button_CriarCategoria">Criar Categoria</string>
    <string name="criarevento_textview_PagarEvento">Pagar Anuncio:</string>
    <string name="criarcategoria_textview_VisualizarCategorias">Categorias Já Existentes:</string>
    <string name="evento_lista_preco">evento_lista_preco</string>
    <string name="evento_lista_bairro">evento_lista_bairro</string>

    <string-array name="Spinner_Estado">
        <item>- - -</item>
        <item>RS</item>
    </string-array>

    <string-array name="Spinner_Pais">
        <item>- - -</item>
        <item>Brasil</item>
    </string-array>

    <string-array name="Spinner_Cidade">
        <item>- - -</item>
        <item>São Borja</item>
    </string-array>

    <string-array name="Spinner_Bairro">
        <item>- - -</item>
        <item>Centro</item>
        <item>Bettim</item>
        <item>Passo</item>
        <item>Tiro</item>
        <item>Pirahy </item>
        <item>Paraboi</item>
        <item>Itacherê</item>
        <item>Maria do Carmo</item>
        <item>Várzea</item>
        <item>Florêncio Guimarães</item>


    </string-array>

    <string-array name="Spinner_Sexo">
        <item>- - -</item>
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </string-array>

    <string-array name="Spinner_Categoria">
        <item>- - -</item>
        <item>Lazer</item>
        <item>Festa</item>
        <item>Ao Vivo</item>
        <item>Religião</item>
        <item>Negocios</item>
        <item>Esporte</item>
        <item>Palestras</item>
    </string-array>

    <!-- MENSAGENS CRIADAS  - - - - - - - - -->

    <string name="Atualizar_Evento">Atualizar Eventos</string>
    <string name="Campos_Obrigatorios">Campos Obrigatorios</string>

    <string name="mensagem_cadastrar">Resgistro Cadastro com Sucesso ! </string>
    <string name="mensagem_atualizar">Resgistro Atualizado com Sucesso ! </string>
    <string name="mensagem_erro">Erro ao Salvar !! ! </string>
    <string name="popin_textview_dataEvento">Informe a Data do Evento:</string>
    <string name="popin_button_dataEvento">Confirmar</string>
    <string name="popin_textview_Assunto">Assunto da Mensagem:</string>
    <string name="popin_edittext_Assunto" />
    <string name="popin_textview_Descricao">Descrição da Mensagem:</string>
    <string name="popin_edittext_Descricao" />
    <string name="popin_button_EnviarMensagem">Enviar Mensagem</string>
    <string name="popin_textview_AvaliacaoOrganizador">Avaliação de Organizador de Organizador</string>
    <string name="popin_textview_AvaliacaoOrganizadorDescricao">As avaliações feitas, vão pra um um Ranking Público de Qualidade.</string>
    <string name="popin_textview_NotaOrganizador">Atribua uma nota para o Organizador:</string>
    <string name="popin_textview_OrganizadorComentario">Escreva um breve comentário:</string>
    <string name="popin_edittext_ComentarioOrganizador" />
    <string name="popin_button_AvaliarOrganizador">Avaliar</string>
    <string name="popin_textview_AvaliacaoEvento">Avaliação do Evento</string>
    <string name="popin_textview_AvaliacaoEventoDescricao">As avaliações feitas neste campo, vão para um ranking público do evento.</string>
    <string name="popin_textview_NotaEvento">Atribua uma nota para este evento:</string>
    <string name="popin_textview_EventoComentario">Escreva um comentário sobre este evento:</string>
    <string name="popin_edittext_ComentarioEvento">Avaliar</string>
    <string name="popin_button_AvaliarEvento">Avaliar</string>
    <string name="popin_textview_MensagemTitulo">Duvidas Sobre o Evento?</string>
    <string name="popin_textview_MensagemDescricao">Envie uma mensagem para o organizador e tire suas duvidas.</string>
    <string name="listarevento_textview_ListarEvento">Lista de Todos os Eventos</string>
    <string name="categoria_lista_categoria">categoria_lista_categoria</string>


    <string name="telamenu_textview_NomeUsuario">MARCOS MARTINS</string>
    <string name="telamenu_textview_EnderecoUsuario">Gronytzky@gmail.com</string>


    <string name="criarevento_edittext_DataEvento" />
    <string name="criarevento_edittext_HoraInicial" />
    <string name="criarevento_edittext_HoraFinal" />

</resources>
