<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:text="@string/popin_textview_MensagemTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/popin_textview_MensagemTitulo"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textAlignment="center"/>

        <TextView
            android:text="@string/popin_textview_MensagemDescricao"
            android:layout_width="242dp"
            android:layout_height="wrap_content"
            android:id="@+id/popin_textview_MensagemDescricao"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:text="@string/popin_textview_Assunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/popin_textview_Assunto" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/popin_edittext_Assunto"
            android:ems="10"
            android:id="@+id/popin_edittext_Assunto"
            android:hint="Maximo XX Caracteres"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp" />

        <TextView
            android:text="@string/popin_textview_Descricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/popin_textview_Descricao"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/popin_edittext_Descricao"
            android:text="@string/popin_edittext_Descricao"
            android:hint="Máximo XX Caracteres"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp" />

        <Button
            android:text="@string/popin_button_EnviarMensagem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/popin_button_EnviarMensagem"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp" />
    </LinearLayout>

</ScrollView>
